; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_lists.c_free_EXPR_LIST_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_lists.c_free_EXPR_LIST_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@unused_expr_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_EXPR_LIST_list(i64* %0) #0 {
  %2 = alloca i64*, align 8
  store i64* %0, i64** %2, align 8
  %3 = load i64*, i64** %2, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %10

7:                                                ; preds = %1
  %8 = load i64*, i64** %2, align 8
  %9 = call i32 @free_list(i64* %8, i32* @unused_expr_list)
  br label %10

10:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @free_list(i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
